fix(tpl): make delete button vertical aligned

--- a/src/tpl/assert/main.css
+++ b/src/tpl/assert/main.css
@@ -210,12 +210,15 @@ em {
 
 .item-list .detail,
 .item-list .delete {
-	display: flex;
-	flex-flow: row nowrap;
-	align-items: center;
 	border-bottom: 1px #f5f5f5 solid;
 	overflow: hidden;
 	zoom: 1;
+}
+
+.item-list .detail {
+	display: flex;
+	flex-flow: row nowrap;
+	align-items: center;
 }
 
 .has-deletable .detail {
@@ -258,6 +261,7 @@ em {
 	color: #800000;
 	font-weight: bold;
 	font-size: 1.6em;
+	line-height: 1em;
 	padding: 0.25em 0.3125em;
 }
 
